--- a/index.html
+++ b/index.html
@@ -1,49 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Landing Page</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Naveen's Portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- Header -->
   <header>
-    <h1>Welcome to My Website</h1>
+    <h1>Welcome to My Portfolio</h1>
     <nav>
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
+      <a href="#about">About</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
     </nav>
   </header>
 
-  <!-- Hero Section -->
-  <section class="hero">
-    <h2>Build Your Dream With Us</h2>
-    <p>Start your journey in web development today!</p>
-    <button>Get Started</button>
+  <section class="about" id="about">
+    <h2>About Me</h2>
+    <p>
+      I'm <strong>Naveen</strong>, a final-year B.Tech IT student with a deep interest in web development and cybersecurity.<br>
+      As a passionate beginner, I'm currently exploring the world of front-end technologies through hands-on projects.<br>
+      My ultimate goal is to become a skilled cybersecurity expert.<br>
+      I'm currently undergoing a valuable internship experience to strengthen my skills and build a solid tech foundation.
+    </p>
   </section>
 
-  <!-- Features -->
-  <section class="features">
-    <div class="box">
-      <h3>Fast</h3>
-      <p>Lightning fast websites</p>
-    </div>
-    <div class="box">
-      <h3>Responsive</h3>
-      <p>Looks great on all devices</p>
-    </div>
-    <div class="box">
-      <h3>Creative</h3>
-      <p>Stylish and modern design</p>
-    </div>
+  <section class="projects" id="projects">
+    <h2>My Projects</h2>
+    <ul>
+      <li>Landing Page</li>
+      <li>Portfolio Website</li>
+      <li>Temperature Converter</li>
+    </ul>
   </section>
 
-  <!-- Footer -->
+  <section class="contact" id="contact">
+    <h2>Contact Me</h2>
+    <p>Email: <a href="mailto:naveenarul637@gmail.com">naveenarul637@gmail.com</a></p>
+    <p>GitHub: <a href="https://github.com/naveen583" target="_blank">github.com/naveen583</a></p>
+  </section>
+
   <footer>
-    <p>&copy; 2025 My Landing Page. All rights reserved.</p>
+    <p>© 2025 Naveen | Web Developer & Cybersecurity Enthusiast</p>
   </footer>
 
 </body>
